# Clarito

./: .gitignore  README.md
backend/: .env.example  .gitignore  pyproject.toml  requirements.txt
backend/app/: auth.py  config.py  database.py  email_service.py  main.py  models.py  r2_upload.py  schemas.py
backend/app/routers/: auth.py  chapters.py  waitlist.py  workspaces.py
frontend/: index.html  package-lock.json  package.json
frontend/src/: App.jsx  index.css
frontend/src/api/: client.js
frontend/src/components/: ProtectedRoute.jsx
frontend/src/lib/: imageCache.js
frontend/src/pages/: AIMentor.jsx  Canvas.jsx  Dashboard.jsx  ForgotPassword.jsx  Landing.jsx  Login.jsx  Register.jsx  ResetPassword.jsx  Workspace.jsx
